test: Align tests for JUnit 4 and TestNG